# TP_Project

./: CMakeLists.txt  README.md  clean.sh  documentation.txt
headers/: action.h  army.h  army_factory.h  fractions.h  gameplay.h  helper_functions.h  heroes.h  soldier.h  units.h  units_characteristics.h
include/: action.h  army.h  army_factory.h  fractions.h  gameplay.h  helper_functions.h  heroes.h  observer.h  soldier.h  units.h  units_characteristics.h
src/: Action.cpp  Army.cpp  ArmyFactory.cpp  Command.cpp  Gameplay.cpp  Heroes.cpp  Observer.cpp  Soldier.cpp  Units.cpp  main.cpp
